# thingybrowser

./: .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile.mingw  Dockerfile.ubuntu  Jenkinsfile  MainApp.cpp  MainApp.h  MainWindow.cpp  MainWindow.h  build-in-docker-mingw.sh  build-in-docker-ubuntu.sh  build-in-docker.sh  conan.cmake  docker-compose.yaml  helper.h  linux_to_win64_conan  main.rc  mingw-w64-x86_64.cmake
.github/workflows/: cmake.yml  release.yml  validation.yml
building/conan/: linux_to_win64_conan
building/docker/: Dockerfile.mingw  Dockerfile.ubuntu  Dockerfile.ubuntu.mingw  build-in-docker-mingw.sh  build-in-docker-ubuntu.sh
collections/: CollectionDetailWindow.cpp  CollectionDetailWindow.h  CollectionsWindow.cpp  CollectionsWindow.h
helpers/: ThingLoader.cpp  ThingLoader.h  font.h  tbNoLinkHtmlWindow.cpp  tbNoLinkHtmlWindow.h
pages/mainwindow/: CollectionsPage.cpp  CollectionsPage.h  DesignersPage.cpp  DesignersPage.h  ThingsPage.cpp  ThingsPage.h  tbButtonGridPage.cpp  tbButtonGridPage.h  tbDataPage.h
settings/: thingybrowserSettings.h  thingyverseSettingsPage.cpp  thingyverseSettingsPage.h  thingyverseSettingsPagePanel.cpp  thingyverseSettingsPagePanel.h
things/: ThingDetailWindow.cpp  ThingDetailWindow.h  ThingsByDesignerWindow.cpp  ThingsByDesignerWindow.h  ThingsWindow.cpp  ThingsWindow.h
